--- a/client/main.html
+++ b/client/main.html
@@ -59,8 +59,8 @@
 
 </body>
 <script>
-// var HOST_NAME="http://localhost:3000";
-var HOST_NAME="http://lol.mrcoder.org:3000";
+var HOST_NAME="http://localhost:3000";
+// var HOST_NAME="http://lol.mrcoder.org:3000";
 $(function(){
 	$('[data-position=fixed]').fixedtoolbar({ tapToggle:false});
 	$.mobile.showPageLoadingMsg();
