添加mime支持，和优化缓存

--- a/server/client/gonglve.html
+++ b/server/client/gonglve.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script type="text/javascript">
-	var hero_title = decodeURIComponent( location.href.split('=')[1] );
+	var hero_title = localStorage['hero_title'];
 	document.title = hero_title;
 	</script>
 	<meta charset='utf8'>
@@ -130,7 +130,7 @@
 			var html = juicer(tpl, {
 				gonglves: data
 			});
-			console.log(html);
+			
 			content.innerHTML = html;
 		});
 	}
