--- a/server/client/gonglve.html
+++ b/server/client/gonglve.html
@@ -118,7 +118,7 @@
 				<div style="background: white; border-radius: 5px">
 					<div style="overflow:hidden">
 						<ul class="skilllist">
-							{@each content.end_cz as zb}
+							{@each content.nf_cz as zb}
 						    <li>
 								<div class="zb_icon">
 									<img src="http://img.lolbox.duowan.com/zb/${zb}_50x50.png">
@@ -143,8 +143,8 @@
 	</div><!-- /content -->
 
 	<script>
-	// var HOST_NAME="http://lol.mrcoder.org:3000";
-	var HOST_NAME="http://192.168.1.172:3000";
+	var HOST_NAME="http://lol.mrcoder.org:3000";
+	var // HOST_NAME="http://192.168.1.172:3000";
 	var ICON_SKILL_HOST="http://img.lolbox.duowan.com/abilities/";
 	var ICON_ZB_HOST="http://img.lolbox.duowan.com/zb/";
 	
